--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     background-image: url(fondo1.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: cover;
+    background-size: 100% 100%;
     justify-content: center;
     align-items: center;
 }
